# gtsrb-reliability

./: .gitignore  APPENDIX.md  README.md  app.py  pyproject.toml  requirements.txt
app/: requirements.txt  streamlit_app.py
notebooks/: gtsrb_colab_workflow.ipynb
outputs/: cnn_augmix_resnet_comparison.csv  model_comparison.csv
outputs/baseline_cnn/: metrics.json  robustness_by_corruption.csv
outputs/baseline_cnn_25/: metrics.json  robustness_by_corruption.csv
outputs/baseline_cnn_augmix/: metrics.json  robustness_by_corruption.csv
outputs/baseline_cnn_augmix_25/: metrics.json  robustness_by_corruption.csv
outputs/baseline_cnn_no_bn/: metrics.json  robustness_by_corruption.csv
outputs/baseline_cnn_no_dropout/: metrics.json  robustness_by_corruption.csv
outputs/resnet18_robust/: metrics.json  robustness_by_corruption.csv
reports/: submission_report_final_cnn_ablation.tex  submission_report_final_no_appendix.docx
runs/baseline_cnn/: config.json  history.csv
runs/baseline_cnn_25/: config.json  history.csv
runs/baseline_cnn_augmix/: config.json  history.csv
runs/baseline_cnn_augmix_25/: config.json  history.csv
runs/baseline_cnn_no_bn/: config.json  history.csv
runs/baseline_cnn_no_dropout/: config.json  history.csv
runs/resnet18_robust/: config.json  history.csv
src/gtsrb_robustness/: __init__.py  augment.py  calibration.py  config.py  corruptions.py  data.py  evaluate.py  explore_data.py  gradcam.py  inference.py  labels.py  metrics.py  models.py  plot_history.py  summarize_results.py  train.py
tests/: test_core.py  test_torch_optional.py
