[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtsrb-robustness"
version = "0.1.0"
description = "Robust traffic sign recognition with calibration, corruption evaluation, Grad-CAM, and Streamlit demo."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "datasets>=2.18",
  "scikit-learn>=1.4",
  "streamlit>=1.32",
  "pillow>=10.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

